--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,6 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 h1 {
   font-size: 62px;
@@ -57,24 +57,82 @@ h3 {
       .rating {
         text-align: center;
         & > span {
-            display: inline-block;
-            margin: 2px;
-          }
+          display: inline-block;
+          margin: 2px;
+        }
       }
       .desc {
         font-size: 15px;
       }
     }
-    .btn-primary{
-        background: #51be78;
-        color: white;
-        outline: none;
-        border: none;
-        cursor: pointer;
+    .btn-primary {
+      background: #51be78;
+      color: white;
+      outline: none;
+      border: none;
+      cursor: pointer;
     }
   }
 }
 
 /*******************/
 /****** /Card1 ******/
+/*******************/
+
+/*******************/
+/****** Card2 ******/
+/*******************/
+#card2 {
+  .thumbnail {
+    line-height: 1.4;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    position: relative;
+    .ld_course_grid_price {
+      background: #5cb85c;
+      box-shadow: 0 1px rgba(0, 0, 0, 0.2);
+      -moz-box-shadow: 0 1px rgba(0, 0, 0, 0.2);
+      -webkit-box-shadow: 0 1px rgba(0, 0, 0, 0.2);
+      color: #fff;
+      text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+      position: absolute;
+      font-size: 14px;
+      left: -8px;
+      top: 10px;
+      padding: 3px 10px;
+      z-index: 2;
+      font-weight: 700;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      width: 100%;
+    }
+    .caption{
+      padding: 15px;
+      position: relative;
+      color: #333;
+      .entry-title{
+        font-size: 1.375rem;
+      }
+      .ld_course_grid_button .btn-primary{
+        width: 100%;
+      }
+      .progress{
+        height: 6px;
+      }
+      .progress-title{
+        float: right;
+        margin: .25em 0;
+        color: #2084e3;
+        font-size: .75em;
+        font-weight: 600;
+        line-height: 1em;  
+      }
+    }
+  }
+}
+/*******************/
+/****** /Card2 ******/
 /*******************/
